--- a/.github/workflows/prepare-release-branch.yml
+++ b/.github/workflows/prepare-release-branch.yml
@@ -116,6 +116,13 @@ jobs:
       - name: Update version in README
         run: sed -Ei "s/(\"io.opentelemetry.android:opentelemetry-android-bom:).*\"/\1${VERSION}-alpha\"/" README.md
 
+      - name: Update instrumentation README.md versions
+        run: |
+          for f in $(find instrumentation -name README.md) ; do 
+            echo Updating version in $f; 
+            sed -Ei "s/(\(\"io\.opentelemetry\.android.*):[[:digit:]]+\.[[:digit:]]+\.[[:digit:]](-alpha)?\"/\1:${VERSION}-alpha\"/" $f
+          done
+
       - name: Update the change log on main
         run: |
           # the actual release date on main will be updated at the end of the release workflow
